server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__session_lifecycle__assert_session_snapshot@create_session_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/session_lifecycle.rs
expression: value
---
healthy: true
nativeSessionId: "<redacted>"
