server/packages/sandbox-agent/tests/sessions/snapshots/sessions__sessions__session_lifecycle__assert_session_snapshot@send_message_mock.snap
---
source: server/packages/sandbox-agent/tests/sessions/session_lifecycle.rs
expression: value
---
status: 204
